--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=task-service
+# Configuration de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# JPA / Hibernate
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
